# ultraballpit

./: .gitignore  CLAUDE.md  README.md  justfile
.specify/memory/: constitution.md
backend/: Cargo.toml
backend/crates/kernel/: Cargo.toml
backend/crates/kernel/benches/: gpu_throughput.rs  scaling.rs  vec4_packing.rs  workgroup_sweep.rs
backend/crates/kernel/src/: boundary.rs  eos.rs  lib.rs  neighbor.rs  particle.rs  sph.rs
backend/crates/kernel/src/gpu/: buffers.rs  mod.rs
backend/crates/kernel/src/gpu/shaders/: density.wgsl  forces.wgsl  integrate.wgsl  neighbor_grid.wgsl  reorder.wgsl  xsph.wgsl
backend/crates/kernel/tests/: gpu_cpu_parity.rs  hydrostatic.rs  kernel_normalization.rs  two_particle.rs
backend/crates/orchestrator/: Cargo.toml
backend/crates/orchestrator/src/: config.rs  distributed.rs  domain.rs  force.rs  geometry.rs  lib.rs  runner.rs
backend/crates/orchestrator/tests/: distributed_validation.rs  stokes_drag_test.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: api.rs  lib.rs  main.rs  runner.rs  state.rs  ws.rs
backend/crates/server/tests/: force_api_test.rs
backend/reference-tests/: Cargo.toml
backend/reference-tests/data/: martin-moyce-1952.json
backend/reference-tests/src/: analytical.rs  benchmarks.rs  gpu_tests.rs  lib.rs  main.rs  tests.rs
configs/: air-obstacle-1cm.json  dam-break-2d.json  hydrostatic-hires.json  poiseuille-2d.json  standing-wave.json  water-box-1cm.json
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.html  main.ts
frontend/src/transport/: client.ts
frontend/src/types/: protocol.ts
frontend/src/ui/: config-list.ts  controls.ts
frontend/src/viewer/: geometry.ts  overlays.ts  particles.ts  scene.ts
geometries/: box-1cm.stl  dam-break-slab.stl  hydrostatic-hires-box.stl  null-obstacle.stl  poiseuille-slab.stl  sphere-1cm.stl  standing-wave-slab.stl
scripts/: generate_benchmark_geometries.py  generate_geometries.py
specs/001-sph-fluid-sim/: benchmark-results.md  data-model.md  optimization-adr.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sph-fluid-sim/checklists/: requirements.md
specs/001-sph-fluid-sim/contracts/: config-schema.json  rest-api.md  transport-protocol.md
