[workspace]
members = [
    "crates/kernel",
    "crates/orchestrator",
    "crates/server",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ultraballpit Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across crates
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
