[package]
name = "reference-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
gpu = ["kernel/gpu", "orchestrator/gpu"]

[[bin]]
name = "reference-tests"
path = "src/main.rs"

[dependencies]
kernel = { path = "../crates/kernel" }
orchestrator = { path = "../crates/orchestrator" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
